# bivium

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  pyproject.toml
scripts/: bench_models.py  run_eval.py
src/backend/: Dockerfile  agent.py  app.py  geo.py  models.py
src/frontend/: Dockerfile  biome.json  package-lock.json  package.json
src/frontend/public/data/: countries-110m.geojson  demo.json
src/frontend/src/app/: globals.css  page.tsx
src/frontend/src/components/: globe.tsx
tests/: scenarios.yaml
